# ASE-2024

./: .gitignore  Cargo.toml  README.md  assignment-3.md  bundler.toml
audio/: sweep.txt
doc/: help.html  search-index.js  settings.html  src-files.js
doc/ring_buffer/: all.html  index.html  struct.RingBuffer.html
doc/src/ring_buffer/: ring_buffer.rs.html
doc/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: comb_filter.rs  fast_convolver.rs  lfo.rs  lib.rs  main.rs  ring_buffer.rs  vibrato.rs
src/utils/: mod.rs
xtask/src/: main.rs
